<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pedromdev.appalunos.FormDadosAlunoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/form_foto"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_avatar" />

        <TextView
            android:id="@+id/txtAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form_foto"
            android:text="@string/lbl_form_nome"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNome"
            android:hint="@string/edt_form_aluno"
            android:layout_below="@+id/txtAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtMat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtNome"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_form_matricula"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtMat"
            android:hint="@string/edt_form_matricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMat"
            android:inputType="number"/>

        <TextView
            android:id="@+id/txtCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtMat"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_form_curso"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtCurso"
            android:hint="@string/edt_form_curso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCurso"/>

        <TextView
            android:id="@+id/txtDisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtCurso"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_form_disciplina"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtDisc"
            android:hint="@string/edt_form_disciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDisc"/>

        <TextView
            android:id="@+id/txtFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtDisc"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_form_telefone"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtFone"
            android:hint="@string/edt_form_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFone"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtFone"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_form_endereco"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtEndereco"
            android:hint="@string/edt_form_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEndereco"
            android:inputType="text"/>

        <TextView
            android:id="@+id/txtSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEndereco"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_form_site"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtSite"
            android:hint="@string/edt_form_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSite"
            android:inputType="textUri"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtSite"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_form_email"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtEmail"
            android:hint="@string/edt_form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEmail"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/txtNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_form_notas"
            android:textStyle="bold"/>

        <!-- AV's -->

        <TextView
            android:id="@+id/txtAV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNotas"
            android:layout_marginLeft="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lbl_form_av1"/>

        <EditText
            android:id="@+id/edtAV1"
            android:hint=""
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAV1"
            android:layout_alignParentStart="true"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/txtAV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNotas"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lbl_form_av2"/>

        <EditText
            android:id="@+id/edtAV2"
            android:hint=""
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAV2"
            android:layout_centerInParent="true"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/txtAV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNotas"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="19dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lbl_form_av3"/>

        <EditText
            android:id="@+id/edtAV3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAV3"
            android:layout_alignParentEnd="true"
            android:inputType="numberDecimal"/>

        <!-- FIM AV's -->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtAV1"
            android:text="@string/btn_form_salvar"
            android:id="@+id/btnCadastrar"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

</ScrollView>
